cmake_minimum_required(VERSION 3.19)
project(tcpIp C)

set(CMAKE_C_STANDARD 11)

add_executable(low_open src/chapter1/low_open.c)
add_executable(low_read src/chapter1/low_read.c)
add_executable(hello_server src/chapter4/hello_server.c)
add_executable(hello_client src/chapter4/hello_client.c)
add_executable(echo_server src/chapter4/echo_server.c)
add_executable(echo_client src/chapter4/echo_client.c)
add_executable(echo_client2 src/chapter4/echo_client2.c)
#add_executable(op_client src/chapter5/op_client.c)
#add_executable(op_server src/chapter5/op_server.c)
add_executable(uecho_server src/chapter6/uecho_server.c)
add_executable(uecho_client src/chapter6/uecho_client.c)
#add_executable(gethostbyname src/chapter8/gethostbyname.c)
add_executable(select src/chapter12/select.c)
add_executable(echo_selectserv src/chapter12/echo_selectserv.c)